--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       <p id="ex-cont">
           <span style="background-color: #3a3a3c;">W</span><span style="background-color: #3a3a3c;">O</span><span id="ex-gr">R</span><span id="ex-yl">D</span><span style="background-color: #3a3a3c;">L</span><span style="background-color: #3a3a3c;">E</span>
       </p>
-      <p>In WORDLE, you try to find a word with the help of other words and the clues they give.</p>
+      <p>In WORDLE, you try to find a simple, singular word with the help of other words and clues they give.</p>
       
       
       <p>If a box turns <span style="color: #548c4c";>GREEN</span>, then the letter is correct and is in the right spot.</p>
